cf-template-wordpress.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Deploy WordPress on a single EC2 instance with Apache, PHP, and MySQL

Parameters:
  KeyName:
    Description: EC2 Key Pair
    Type: AWS::EC2::KeyPair::KeyName

Resources:
  WordPressInstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP, HTTPS, and SSH
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  WordPressInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      SecurityGroupIds:
        - !Ref WordPressInstanceSecurityGroup
      ImageId: ami-0c2b8ca1dad447f8a  # Amazon Linux 2 (region-specific)
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          amazon-linux-extras enable php8.0
          yum clean metadata
          yum install -y httpd php php-mysqlnd mariadb
          systemctl start httpd
          systemctl enable httpd
          
          # Download and configure WordPress
          cd /var/www/html
          wget https://wordpress.org/latest.tar.gz
          tar -xzf latest.tar.gz
          cp -r wordpress/* .
          rm -rf wordpress latest.tar.gz
          
          # Set permissions
          chown -R apache:apache /var/www/html
          chmod -R 755 /var/www/html
          
          # Create wp-config with dummy DB config (you can replace it with real one)
          cp wp-config-sample.php wp-config.php
          sed -i "s/database_name_here/wordpress/" wp-config.php
          sed -i "s/username_here/admin/" wp-config.php
          sed -i "s/password_here/password/" wp-config.php

Outputs:
  WebsiteURL:
    Description: WordPress Site URL
    Value: !Sub "http://${WordPressInstance.PublicDnsName}"
